@@ -14,6 +14,9 @@ changes relative to sbcl-1.4.2:
   * bug fix: memory faults from lisp no longer use (thread-and-interrupt
     unsafe) global storage for fault addresses (everywhere), and now have
     cleaner backtraces (on x86 and x86-64). (lp#309068)
+  * bug fix: pathnames with a directory component of the form
+    (:absolute {:up,:wild,:wild-inferiors}) no longer fail to unparse.
+    (lp#1738775)
 
 changes in sbcl-1.4.2 relative to sbcl-1.4.1:
   * minor incompatible change: SB-EXT:QUIT is no longer marked as deprecated
